--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload File</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <h1>Upload File</h1>
-    <form ref="uploadForm" id="uploadForm" action="/upload" method="post" encType="multipart/form-data">
-        <input type="file" name="file" />
-        <input type="submit" value="Upload File" name="submit" />
-    </form>
+<body class="bg-gray-100 h-screen flex items-center justify-center">
+    <div class="bg-white p-8 rounded shadow-md w-96">
+        <h1 class="text-2xl font-semibold mb-6 text-center text-gray-800">Unggah File</h1>
+        <form ref="uploadForm" id="uploadForm" action="/upload" method="post" encType="multipart/form-data">
+            <div class="mb-4">
+                <input type="file" name="file" class="block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-indigo-50 file:text-indigo-700 hover:file:bg-indigo-100" />
+            </div>
+            <button type="submit" name="submit" class="w-full bg-indigo-500 text-white py-2 px-4 rounded hover:bg-indigo-600">Unggah File</button>
+        </form>
+    </div>
 </body>
 </html>
-
