--- a/index.html
+++ b/index.html
@@ -8,13 +8,54 @@
 </head>
 <body class="bg-gray-100 h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded shadow-md w-96">
-        <h1 class="text-2xl font-semibold mb-6 text-center text-gray-800">Unggah File</h1>
-        <form ref="uploadForm" id="uploadForm" action="/upload" method="post" encType="multipart/form-data">
-            <div class="mb-4">
-                <input type="file" name="file" class="block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-indigo-50 file:text-indigo-700 hover:file:bg-indigo-100" />
+        <h1 class="text-2xl font-semibold mb-4 text-center">Upload File</h1>
+        <form ref="uploadForm" id="uploadForm" action="/upload" method="post" enctype="multipart/form-data" class="space-y-4">
+            <div>
+                <label class="block text-sm font-medium text-gray-700">Pilih File</label>
+                <input type="file" name="file" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
             </div>
-            <button type="submit" name="submit" class="w-full bg-indigo-500 text-white py-2 px-4 rounded hover:bg-indigo-600">Unggah File</button>
+            <div>
+                <input type="submit" value="Upload File" name="submit" class="w-full py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 cursor-pointer">
+            </div>
         </form>
-    </div>
+        <div class="mt-6 border rounded-md p-4 bg-gray-50">
+            <pre id="htmlCode" class="text-xs overflow-x-auto">
+&lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+    &lt;title&gt;Upload File&lt;/title&gt;
+    &lt;script src="https://cdn.tailwindcss.com"&gt;&lt;/script&gt;
+&lt;/head&gt;
+&lt;body class="bg-gray-100 h-screen flex items-center justify-center"&gt;
+    &lt;div class="bg-white p-8 rounded shadow-md w-96"&gt;
+        &lt;h1 class="text-2xl font-semibold mb-4 text-center"&gt;Upload File&lt;/h1&gt;
+        &lt;form ref="uploadForm" id="uploadForm" action="/upload" method="post" enctype="multipart/form-data" class="space-y-4"&gt;
+            &lt;div&gt;
+                &lt;label class="block text-sm font-medium text-gray-700"&gt;Pilih File&lt;/label&gt;
+                &lt;input type="file" name="file" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"&gt;
+            &lt;/div&gt;
+            &lt;div&gt;
+                &lt;input type="submit" value="Upload File" name="submit" class="w-full py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 cursor-pointer"&gt;
+            &lt;/div&gt;
+        &lt;/form&gt;
+        &lt;div class="mt-6 border rounded-md p-4 bg-gray-50"&gt;
+            &lt;pre id="htmlCode" class="text-xs overflow-x-auto"&gt;
+                &lt;!-- Kode HTML di sini --&gt;
+            &lt;/pre&gt;
+            &lt;button id="copyButton" class="mt-2 py-1 px-3 bg-indigo-500 text-white rounded-md text-sm hover:bg-indigo-600">Salin Kode&lt;/button&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+    <script>
+        document.getElementById('copyButton').addEventListener('click', function() {
+            const text = document.getElementById('htmlCode').textContent;
+            navigator.clipboard.writeText(text).then(() => {
+                alert('Kode HTML telah disalin!');
+            }).catch(err => {
+                console.error('Gagal menyalin teks: ', err);
+            });
+        });
+    </script>
 </body>
 </html>
