--- a/index.html
+++ b/index.html
@@ -6,37 +6,49 @@
     <title>Upload File</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="container mx-auto p-8">
-        <h1 class="text-3xl font-bold mb-4">Upload File</h1>
-        <form ref="uploadForm" id="uploadForm" action="/upload" method="post" enctype="multipart/form-data" class="mb-4">
-            <input type="file" name="file" class="mb-2 p-2 border rounded" />
-            <button type="submit" name="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Upload File</button>
+<body class="bg-gray-100 h-screen flex items-center justify-center">
+    <div class="bg-white p-8 rounded shadow-md w-96">
+        <h1 class="text-2xl font-semibold mb-4 text-center">Upload File</h1>
+        <form ref="uploadForm" id="uploadForm" action="/upload" method="post" enctype="multipart/form-data">
+            <div class="mb-4">
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="file">
+                    Pilih File
+                </label>
+                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="file" type="file" name="file">
+            </div>
+            <div class="flex items-center justify-center">
+                <input class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit" value="Upload File" name="submit">
+            </div>
         </form>
-        <div id="result" class="mt-4 p-4 border rounded">
-            <p id="resultText">Hasil akan muncul di sini...</p>
-            <button id="copyButton" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded mt-2">Salin Teks</button>
+
+        <div id="hasil-teks" class="mt-6 hidden">
+            <h2 class="text-lg font-semibold mb-2">Hasil Teks:</h2>
+            <div class="border rounded p-4 bg-gray-200 relative">
+                <pre id="teks-hasil" class="whitespace-pre-wrap"></pre>
+                <button id="salin-teks" class="absolute top-2 right-2 bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-2 rounded text-sm">Salin</button>
+            </div>
         </div>
     </div>
 
     <script>
-        const copyButton = document.getElementById('copyButton');
-        const resultText = document.getElementById('resultText');
+        // Contoh simulasi hasil teks (ganti dengan hasil dari server)
+        const hasilTeks = "Ini adalah contoh teks hasil upload file.";
 
-        copyButton.addEventListener('click', () => {
-            const textToCopy = resultText.textContent;
-            navigator.clipboard.writeText(textToCopy).then(() => {
+        // Menampilkan hasil teks
+        const hasilTeksDiv = document.getElementById('hasil-teks');
+        const teksHasilPre = document.getElementById('teks-hasil');
+        teksHasilPre.textContent = hasilTeks;
+        hasilTeksDiv.classList.remove('hidden');
+
+        // Fungsi untuk menyalin teks
+        document.getElementById('salin-teks').addEventListener('click', function() {
+            const teks = document.getElementById('teks-hasil').textContent;
+            navigator.clipboard.writeText(teks).then(() => {
                 alert('Teks berhasil disalin!');
             }).catch(err => {
                 console.error('Gagal menyalin teks: ', err);
-                alert('Gagal menyalin teks.');
             });
         });
-
-        // Contoh untuk menampilkan hasil (ganti dengan logika sesuai kebutuhan)
-        setTimeout(() => {
-            resultText.textContent = "Ini adalah contoh hasil teks yang bisa disalin.";
-        }, 1000); // Menunda 1 detik untuk simulasi
     </script>
 </body>
 </html>
