--- a/index.html
+++ b/index.html
@@ -8,47 +8,57 @@
 </head>
 <body class="bg-gray-100 h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded shadow-md w-96">
-        <h1 class="text-2xl font-semibold mb-4 text-center">Unggah File</h1>
+        <h1 class="text-2xl font-semibold mb-4">Upload File</h1>
         <form id="uploadForm" action="/upload" method="post" enctype="multipart/form-data">
             <div class="mb-4">
-                <input type="file" name="file" id="fileInput" class="block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-700" />
+                <input type="file" name="file" id="fileInput" class="border p-2 w-full rounded">
             </div>
             <div class="mb-4">
-                <button type="submit" id="submitButton" class="w-full bg-indigo-500 text-white py-2 px-4 rounded hover:bg-indigo-700">Unggah File</button>
+                <button type="submit" id="submitButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-full">
+                    Upload File
+                </button>
             </div>
-            <div id="loading" class="hidden text-center">
-                <svg class="animate-spin h-5 w-5 mr-3 ..." viewBox="0 0 24 24">
-                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-                </svg>
-                Memuat...
-            </div>
-            <div id="result" class="hidden mt-4">
-                <label for="resultDisplay" class="block text-sm font-medium text-gray-700">Hasil Unggahan:</label>
-                <div id="resultDisplay" class="mt-1 p-4 border rounded-md bg-gray-50">
-                    </div>
+            <div id="loading" class="hidden">
+                <p class="text-center">Loading...</p>
             </div>
         </form>
+        <div id="result" class="mt-4">
+            <p>Hasil Upload:</p>
+            <p id="fileUrl" class="text-blue-500"></p>
+        </div>
     </div>
 
     <script>
-        const uploadForm = document.getElementById('uploadForm');
+        const form = document.getElementById('uploadForm');
         const submitButton = document.getElementById('submitButton');
         const loading = document.getElementById('loading');
         const result = document.getElementById('result');
-        const resultDisplay = document.getElementById('resultDisplay');
+        const fileUrl = document.getElementById('fileUrl');
 
-        uploadForm.addEventListener('submit', (event) => {
-            loading.classList.remove('hidden');
+        form.addEventListener('submit', (e) => {
+            e.preventDefault();
+
             submitButton.disabled = true;
+            loading.classList.remove('hidden');
 
-            // Simulasi unggahan (ganti dengan logika unggahan sebenarnya)
-            setTimeout(() => {
+            const formData = new FormData(form);
+
+            fetch('/upload', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
                 loading.classList.add('hidden');
                 submitButton.disabled = false;
-                result.classList.remove('hidden');
-                resultDisplay.innerHTML = "<p>File berhasil diunggah!</p><p>Nama file: contoh_file.txt</p><p>Ukuran: 10 KB</p>"; // Ganti dengan hasil unggahan sebenarnya
-            }, 2000);
+                fileUrl.textContent = data.url;
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                loading.classList.add('hidden');
+                submitButton.disabled = false;
+                fileUrl.textContent = 'Gagal mengunggah file.';
+            });
         });
     </script>
 </body>
