--- a/index.html
+++ b/index.html
@@ -8,57 +8,48 @@
 </head>
 <body class="bg-gray-100 h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded shadow-md w-96">
-        <h1 class="text-2xl font-semibold mb-4">Upload File</h1>
+        <h1 class="text-2xl font-semibold mb-4 text-center">Unggah File</h1>
         <form id="uploadForm" action="/upload" method="post" enctype="multipart/form-data">
             <div class="mb-4">
-                <input type="file" name="file" id="fileInput" class="border p-2 w-full rounded">
+                <input type="file" name="file" id="fileInput" class="block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-700" />
             </div>
             <div class="mb-4">
-                <button type="submit" id="submitButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-full">
-                    Upload File
-                </button>
+                <button type="submit" id="submitButton" class="w-full bg-indigo-500 text-white py-2 px-4 rounded hover:bg-indigo-700">Unggah File</button>
             </div>
-            <div id="loading" class="hidden">
-                <p class="text-center">Loading...</p>
+            <div id="loading" class="hidden text-center">
+                <svg class="animate-spin h-5 w-5 mr-3 ..." viewBox="0 0 24 24">
+                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                </svg>
+                Memuat...
+            </div>
+            <div id="result" class="hidden mt-4">
+                <label for="resultUrl" class="block text-sm font-medium text-gray-700">URL Hasil Unggahan:</label>
+                <div class="mt-1">
+                    <input type="text" id="resultUrl" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border-gray-300 rounded-md" readonly>
+                </div>
             </div>
         </form>
-        <div id="result" class="mt-4">
-            <p>Hasil Upload:</p>
-            <p id="fileUrl" class="text-blue-500"></p>
-        </div>
     </div>
 
     <script>
-        const form = document.getElementById('uploadForm');
+        const uploadForm = document.getElementById('uploadForm');
         const submitButton = document.getElementById('submitButton');
         const loading = document.getElementById('loading');
         const result = document.getElementById('result');
-        const fileUrl = document.getElementById('fileUrl');
+        const resultUrl = document.getElementById('resultUrl');
 
-        form.addEventListener('submit', (e) => {
-            e.preventDefault();
-
-            submitButton.disabled = true;
+        uploadForm.addEventListener('submit', (event) => {
             loading.classList.remove('hidden');
+            submitButton.disabled = true;
 
-            const formData = new FormData(form);
-
-            fetch('/upload', {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
+            // Simulasi unggahan (ganti dengan logika unggahan sebenarnya)
+            setTimeout(() => {
                 loading.classList.add('hidden');
                 submitButton.disabled = false;
-                fileUrl.textContent = data.url;
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                loading.classList.add('hidden');
-                submitButton.disabled = false;
-                fileUrl.textContent = 'Gagal mengunggah file.';
-            });
+                result.classList.remove('hidden');
+                resultUrl.value = "https://contoh.com/file-yang-diunggah.txt"; // Ganti dengan URL hasil unggahan sebenarnya
+            }, 2000);
         });
     </script>
 </body>
