--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <form id="uploadForm" action="/upload" method="post" enctype="multipart/form-data">
             <div class="mb-4">
                 <input type="file" name="file" id="fileInput" class="block w-full text-sm text-slate-500
-      file:mr-4 file:py-2 file:px-4
-      file:rounded-full file:border-0
-      file:text-sm file:font-semibold
-      file:bg-blue-500 file:text-white
-      hover:file:bg-blue-700" />
+                    file:mr-4 file:py-2 file:px-4
+                    file:rounded-full file:border-0
+                    file:text-sm file:font-semibold
+                    file:bg-blue-500 file:text-white
+                    hover:file:bg-blue-700" />
             </div>
             <button type="submit" id="submitButton"
                 class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-700">Upload File</button>
@@ -35,7 +35,7 @@
         </form>
         <div id="result" class="mt-4 p-4 bg-gray-200 rounded hidden">
             <h2 class="text-lg font-semibold mb-2">Result:</h2>
-            <div id="resultContent"></div>
+            <div id="resultContent" class="break-all"></div>
             <button id="copyButton" class="mt-2 bg-gray-400 hover:bg-gray-500 text-white py-1 px-2 rounded">Copy URL</button>
         </div>
     </div>
