--- a/index.html
+++ b/index.html
@@ -4,57 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload File</title>
-    <!-- Tambahkan Tailwind CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
         <h1 class="text-2xl font-bold mb-6 text-center">Upload File</h1>
         <form ref="uploadForm" id="uploadForm" action="/upload" method="post" encType="multipart/form-data" class="space-y-4">
-            <input type="file" name="file" class="w-full p-2 border border-gray-300 rounded-lg" />
-            <button type="submit" class="w-full bg-blue-500 text-white p-2 rounded-lg hover:bg-blue-600 transition duration-200">
-                <span id="submitText">Upload File</span>
-                <span id="loadingSpinner" class="hidden">Loading...</span>
-            </button>
+            <div>
+                <input type="file" name="file" class="w-full p-2 border border-gray-300 rounded-lg" />
+            </div>
+            <div>
+                <button type="submit" class="w-full bg-blue-500 text-white p-2 rounded-lg hover:bg-blue-600 transition duration-200">
+                    <span id="submitText">Upload File</span>
+                    <span id="loadingSpinner" class="hidden">
+                        <svg class="animate-spin h-5 w-5 text-white inline-block" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                        </svg>
+                    </span>
+                </button>
+            </div>
         </form>
-        <div id="result" class="mt-6 text-center"></div>
+        <div id="resultUrl" class="mt-6 text-center hidden">
+            <p class="text-gray-700">File uploaded successfully! Here is your URL:</p>
+            <a id="fileUrl" href="#" class="text-blue-500 underline break-all" target="_blank"></a>
+        </div>
     </div>
 
     <script>
-        document.getElementById('uploadForm').addEventListener('submit', function(e) {
-            e.preventDefault();
+        document.getElementById('uploadForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            
+            const submitButton = document.querySelector('button[type="submit"]');
+            const submitText = document.getElementById('submitText');
+            const loadingSpinner = document.getElementById('loadingSpinner');
+            const resultUrlDiv = document.getElementById('resultUrl');
+            const fileUrlLink = document.getElementById('fileUrl');
 
-            // Tampilkan loading state
-            document.getElementById('submitText').classList.add('hidden');
-            document.getElementById('loadingSpinner').classList.remove('hidden');
+            submitText.classList.add('hidden');
+            loadingSpinner.classList.remove('hidden');
+            submitButton.disabled = true;
 
-            // Kirim form data menggunakan Fetch API
             const formData = new FormData(this);
+
             fetch('/upload', {
                 method: 'POST',
                 body: formData
             })
             .then(response => response.json())
             .then(data => {
-                // Sembunyikan loading state
-                document.getElementById('submitText').classList.remove('hidden');
-                document.getElementById('loadingSpinner').classList.add('hidden');
+                submitText.classList.remove('hidden');
+                loadingSpinner.classList.add('hidden');
+                submitButton.disabled = false;
 
-                // Tampilkan URL file yang diunggah
                 if (data.url) {
-                    document.getElementById('result').innerHTML = `
-                        <p class="text-green-600">File uploaded successfully!</p>
-                        <a href="${data.url}" target="_blank" class="text-blue-500 underline">${data.url}</a>
-                    `;
+                    fileUrlLink.href = data.url;
+                    fileUrlLink.textContent = data.url;
+                    resultUrlDiv.classList.remove('hidden');
                 } else {
-                    document.getElementById('result').innerHTML = `<p class="text-red-600">Upload failed. Please try again.</p>`;
+                    alert('Upload failed. Please try again.');
                 }
             })
             .catch(error => {
                 console.error('Error:', error);
-                document.getElementById('submitText').classList.remove('hidden');
-                document.getElementById('loadingSpinner').classList.add('hidden');
-                document.getElementById('result').innerHTML = `<p class="text-red-600">Upload failed. Please try again.</p>`;
+                submitText.classList.remove('hidden');
+                loadingSpinner.classList.add('hidden');
+                submitButton.disabled = false;
+                alert('Upload failed. Please try again.');
             });
         });
     </script>
