--- a/index.html
+++ b/index.html
@@ -1,71 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload File</title>
-    <!-- Menambahkan link ke Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Spinner styles */
+        .spinner {
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-left-color: #4f46e5;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 p-10">
-    <h1 class="text-3xl font-bold mb-6 text-center">Upload File</h1>
 
-    <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+    <div class="bg-white p-8 rounded shadow-md w-full max-w-lg">
+        <h1 class="text-2xl font-bold mb-4">Upload File</h1>
         <form ref="uploadForm" id="uploadForm" action="/upload" method="post" encType="multipart/form-data" class="space-y-4">
-            <!-- Input file -->
-            <div class="flex flex-col">
-                <label for="file" class="font-semibold">Select File</label>
-                <input type="file" name="file" id="file" class="p-2 border border-gray-300 rounded-lg">
-            </div>
-
-            <!-- Tombol upload -->
-            <div class="flex items-center space-x-2">
-                <input type="submit" value="Upload File" name="submit" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 cursor-pointer">
-                <!-- Loading Spinner -->
-                <div id="loadingSpinner" class="hidden">
-                    <svg class="animate-spin h-5 w-5 text-blue-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 1 1 16 0 8 8 0 0 1-16 0z"></path>
-                    </svg>
-                    <span class="ml-2">Uploading...</span>
-                </div>
-            </div>
+            <input type="file" name="file" class="block w-full text-sm text-gray-700 border border-gray-300 rounded-lg p-2" />
+            <button type="submit" class="w-full bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700 focus:outline-none">Upload File</button>
         </form>
-    </div>
-
-    <!-- Tempat menampilkan hasil upload -->
-    <div id="result" class="mt-6 p-4 bg-gray-50 border border-gray-300 rounded-lg w-full">
-        <h2 class="text-xl font-semibold">Upload Result</h2>
-        <p id="resultMessage">Menunggu file untuk di-upload...</p>
+        <div id="loadingSpinner" class="spinner hidden mx-auto mt-4"></div>
+        <div id="result" class="mt-4 p-4 border border-gray-300 rounded-lg w-full"></div>
     </div>
 
     <script>
-        // Mendapatkan elemen form dan spinner
-        const form = document.getElementById("uploadForm");
-        const loadingSpinner = document.getElementById("loadingSpinner");
-        const resultMessage = document.getElementById("resultMessage");
+        const uploadForm = document.getElementById('uploadForm');
+        const loadingSpinner = document.getElementById('loadingSpinner');
+        const resultDiv = document.getElementById('result');
 
-        // Ketika form disubmit, tampilkan spinner dan sembunyikan pesan hasil
-        form.addEventListener("submit", function(e) {
-            e.preventDefault(); // Mencegah form submit secara default
-            loadingSpinner.classList.remove("hidden"); // Tampilkan spinner
-            resultMessage.textContent = "Uploading your file..."; // Update status
-
-            const formData = new FormData(form);
-            fetch(form.action, {
-                method: "POST",
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                loadingSpinner.classList.add("hidden"); // Sembunyikan spinner
-                resultMessage.textContent = `Upload sukses! File Anda: ${data.fileName}`; // Tampilkan hasil upload
-            })
-            .catch(error => {
-                loadingSpinner.classList.add("hidden"); // Sembunyikan spinner
-                resultMessage.textContent = "Upload gagal. Coba lagi."; // Tampilkan pesan error
-            });
+        uploadForm.addEventListener('submit', function () {
+            loadingSpinner.classList.remove('hidden');
+            resultDiv.innerHTML = ''; // Clear previous results
         });
     </script>
 </body>
+
 </html>
