--- a/index.html
+++ b/index.html
@@ -1,55 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload File</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Spinner styles */
-        .spinner {
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-left-color: #4f46e5;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 1s linear infinite;
-        }
-
-        @keyframes spin {
-            to {
-                transform: rotate(360deg);
-            }
-        }
-
-        .hidden {
-            display: none;
-        }
-    </style>
-</head>
-
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="bg-white p-8 rounded shadow-md w-full max-w-lg">
-        <h1 class="text-2xl font-bold mb-4">Upload File</h1>
-        <form ref="uploadForm" id="uploadForm" action="/upload" method="post" encType="multipart/form-data" class="space-y-4">
-            <input type="file" name="file" class="block w-full text-sm text-gray-700 border border-gray-300 rounded-lg p-2" />
-            <button type="submit" class="w-full bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700 focus:outline-none">Upload File</button>
-        </form>
-        <div id="loadingSpinner" class="spinner hidden mx-auto mt-4"></div>
-        <div id="result" class="mt-4 p-4 border border-gray-300 rounded-lg w-full"></div>
-    </div>
-
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script>
-        const uploadForm = document.getElementById('uploadForm');
-        const loadingSpinner = document.getElementById('loadingSpinner');
-        const resultDiv = document.getElementById('result');
+        function showLoading() {
+            document.getElementById('loading').classList.remove('hidden');
+        }
 
-        uploadForm.addEventListener('submit', function () {
-            loadingSpinner.classList.remove('hidden');
-            resultDiv.innerHTML = ''; // Clear previous results
-        });
+        function handleUpload(event) {
+            event.preventDefault();
+            showLoading();
+            const form = document.getElementById('uploadForm');
+            const formData = new FormData(form);
+
+            fetch(form.action, {
+                method: form.method,
+                body: formData,
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('loading').classList.add('hidden');
+                window.open(data.url, '_blank');
+            })
+            .catch(error => {
+                document.getElementById('loading').classList.add('hidden');
+                console.error('Error:', error);
+            });
+        }
     </script>
+</head>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+    <div class="bg-white p-8 rounded shadow-md w-full max-w-md">
+        <h1 class="text-2xl font-bold mb-4">Upload File</h1>
+        <form id="uploadForm" action="/upload" method="post" encType="multipart/form-data" onsubmit="handleUpload(event)">
+            <input type="file" name="file" class="block w-full text-sm text-gray-500 border border-gray-300 rounded mb-4" />
+            <input type="submit" value="Upload File" name="submit" class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-600 cursor-pointer" />
+        </form>
+        <div id="loading" class="hidden mt-4 text-center text-blue-500">
+            Loading...
+        </div>
+    </div>
 </body>
-
 </html>
